<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    tools:context=".GpsNavigationActivity" >

    <TextView
        android:id="@+id/textCreateAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/velocity"
        android:textColor="@android:color/holo_red_light"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textCreateAltitude"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textYourLocalization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/your_localizationo"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textCreateLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textYourLocalization"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/longitude"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textSeqenceSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCreateLongitude"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/additional_information"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textCreateVelocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateLatitude"
            android:layout_below="@+id/textCreateLatitude"
            android:layout_marginTop="10dp"
            android:text="@string/latitude"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textCreateLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateVelocity"
            android:layout_below="@+id/textCreateVelocity"
            android:layout_marginTop="10dp"
            android:text="@string/altitude"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textCreateAccuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateLongitude"
            android:layout_below="@+id/textSeqenceSettings"
            android:layout_marginTop="10dp"
            android:text="@string/distance"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textAccuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateAccuracy"
            android:layout_below="@+id/textCreateAccuracy"
            android:layout_marginTop="10dp"
            android:text="@string/accuracy"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textMaxVelocity"
            android:layout_below="@+id/textMaxVelocity"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textAverageVelocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textAccuracy"
            android:layout_below="@+id/textAccuracy"
            android:layout_marginTop="10dp"
            android:text="@string/avg_velocity"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textMaxVelocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textAverageVelocity"
            android:layout_below="@+id/textAverageVelocity"
            android:layout_marginTop="10dp"
            android:text="@string/max_velocity"
            android:textSize="20sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/myBoxGps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:button="@drawable/btn_service_gps"
            android:minHeight="96dp"
            android:minWidth="96dp"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>